# OmniColor

./: README.md
adaptive_voxelization/: CMakeLists.txt
adaptive_voxelization/src/: adaptive_voxelization.cpp  adaptive_voxelization.hpp
